@@ -1,3 +1,10 @@
+2008-05-29  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/project.h, src/plugindata.h, src/geany.h, src/filetypes.h,
+   src/document.h:
+   Remove underscore prefix from some struct names.
+
+
 2008-05-29  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/build.c, src/utils.c, src/win32.c, src/keybindings.c,
